<resources>
    <string name="app_name">Layout Designs</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_up">or sign up with</string>
    <string name="facebook">Facebook icon</string>
    <string name="google">Google icon</string>
    <string name="instagram">instagram</string>
    <string name="city_name">LAGOS, NIGERIA</string>
    <string name="weather">32 \u00B0 C</string>
    <string name="humidity">54%</string>
    <string name="speed">10K/M</string>
    <string name="rain">0%</string>
    <string name="date">WEDNESDAY, FEBRUARY 9</string>
</resources>