<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:backgroundTint="@color/background_tint"
    android:backgroundTintMode="src_atop"
    tools:context=".WeatherActivity">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_wide"
        android:text="@string/city_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_wide"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/weather"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_name" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/date"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_moderate"
        android:background="@color/background_tint_linear"
        android:backgroundTintMode="src_atop"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date">

        <ImageView
            android:id="@+id/humidity_img"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="src_atop"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/humidity__1_"
            tools:ignore="ImageContrastCheck" />
        <TextView
            android:id="@+id/wet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginEnd="@dimen/margin_wide"
            android:text="@string/humidity"
            android:textColor="@color/white"
            android:drawablePadding="@dimen/image_padding"/>

        <ImageView
            android:id="@+id/wind_img"
            android:importantForAccessibility="no"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/icons8_wind_64"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="src_atop"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"/>

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/speed"
            android:layout_marginEnd="@dimen/margin_wide"
            android:drawablePadding="@dimen/image_padding"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/cloud_img"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/downpour"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="src_atop"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:importantForAccessibility="no"/>

        <TextView
            android:id="@+id/cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/rain"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>